<resources>
    <string name="application_label">SyncTab</string>

    <string name="synctab">SyncTab</string>
    <string name="share_synctab">&#160;SyncTab</string>

    <string name="synctab_activity">SyncTab</string>
    <string name="login_activity">SyncTab: Login</string>
    <string name="reset_password_activity">SyncTab: Reset Password</string>
    <string name="registration_activity">SyncTab: Registration</string>
    <string name="about_activity">About</string>
    <string name="settings_activity">Settings</string>
    <string name="tag_edit_activity">Tags</string>

    <string name="sync_in_progress">Syncing Link...</string>
    <string name="success_sync">Link was sent.\n\nHave fun!</string>
    <string name="enqueue_sync">Link will be send\n when you\'ll be online.\n\n Have fun!</string>
    <string name="failed_sync">Error to send a link.\n\nSorry ;(</string>
    <string name="incorrect_url">What you\'re trying to send is a not a URL.\n\n Try something else!</string>
    <string name="nothing_to_share">Nothing to send:\n no URL received.</string>

    <string name="success_sync_m">SyncTab: Link was sent successfully.</string>
    <string name="enqueue_sync_m">SyncTab: Link will be send when you\'ll be online.</string>
    <string name="failed_sync_m">SyncTab: Error to send a link. Sorry ;(</string>
    <string name="incorrect_url_m">SyncTab: What you\'re trying to send is a not a URL. Try something else!</string>
    <string name="nothing_to_share_m">SyncTab: Nothing to send - no URL received.</string>

    <string name="synctab_service">SyncTab Service</string>
    <string name="refresh_service">SyncTab Refresh Service</string>

    <string name="pref_url_title">SyncTab URL</string>
    <string name="pref_url_summary">SyncTab Service URL</string>
    <string name="open">Open</string>
    <string name="hide">Hide</string>
    <string name="failed_retrieve_shared_tabs">Failed to refresh the list of links</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="please_login">SyncTab: Login</string>
    <string name="please_reset_password">Reset Password</string>
    <string name="reset_password_desc">Please enter your email address, so we can send you an email with reset password link.
            Follow this link to change your current password.</string>
    <string name="registration">SyncTab: Registration</string>
    <string name="register">Register</string>
    <string name="register_now">Register Now</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_now">Reset Now</string>
    <string name="please_wait">Please wait...</string>
    <string name="account_registration">Account registration...</string>
    <string name="authentication">Authenticating...</string>
    <string name="loading_tabs">Loading a List of Links...</string>

    <string name="email_required">Email is required to reset password.</string>
    <string name="email_password_required">Please enter email and password.</string>
    <string name="error_authenticate">Error to login. Try again!</string>
    <string name="failed_authenticate">Incorrect email/password</string>
    <string name="error_register">Error to register. Try again!</string>
    <string name="failed_register">Failed to register</string>
    <string name="error_reset_password">Error to reset a password. Try again!</string>
    <string name="failed_reset_password">Failed to reset a password.</string>
    <string name="reset_password_successfully">We sent you an email with instructions. Read and follow those instructions to change password.</string>
    <string name="no_connection">Lost Connection</string>
    <string name="logout">Logout</string>
    <string name="logout_progress">Logout...</string>
    <string name="help">Help</string>
    <string name="refresh">Refresh</string>
    <string name="home">Home</string>
    <string name="not_a_user">Do not have an account yet?</string>
    <string name="unknown">Unknown</string>
    <string name="resend">Re-send</string>
    <string name="remove">Remove</string>
    <string name="rename">Rename</string>
    <string name="share_via">Share Via</string>
    <string name="copy_link">Copy Link</string>

    <string name="msg_tab_is_removed">Link is removed</string>
    <string name="msg_tab_is_reshared">Link is re-sent</string>
    <string name="msg_failed_to_reshared_tab">Failed to re-send a link</string>
    <string name="msg_failed_to_remove_tab">Failed to remove a link</string>
    <string name="about">About</string>
    <string name="done">Done</string>
    <string name="username">Username</string>
    <string name="none">None</string>
    <string name="version">Version</string>
    <string name="website">Website</string>
    <string name="documentation">Documentation</string>
    <string name="chrome_extension">Chrome Extension</string>
    <string name="submit_issue">Submit Issue</string>
    <string name="contact">Contact</string>
    <string name="start_help_notice">
        <b>TIPS</b>:
        \n\nInstall a SyncTab Chrome Extension
        in your desktop browser. Read more at
        <a href="http://synctab.khmelyuk.com">synctab.khmelyuk.com</a>.
        \n\nUse tags to send links to different browsers, like one in Home or in Work.
        You can also send links to this device from your Chrome.
        \n\nYou can send links from the browser running in your Home computer to the browser in your Work computer.
        No need for them to be online both.
    </string>

    <string name="send_tab_to">Send to...</string>

    <string name="settings">Settings</string>
    <string name="refresh_interval">Refresh Interval</string>
    <string name="refresh_interval_summary">How often to check for new links to open</string>
    <string name="current_tag">Open Links with Tag</string>
    <string name="current_tag_summary">Open links with specified Tag only</string>
    <string name="website_summary">View SyncTab website online</string>
    <string name="chrome_extension_summary">Read more about SyncTab Chrome Extension</string>
    <string name="documentation_summary">Read documentation online</string>
    <string name="submit_issue_summary">Submit issue via online form</string>
    <string name="contact_summary">Contact us via online form</string>
    <string name="show_sharing_status">Show Sync Status</string>
    <string name="show_sharing_status_summary">Show a screen with the status of sharing a link</string>

    <string name="about_references">References</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="edit_tags_summary">Add, rename and remove tags</string>
    <string name="tag_context_menu">Select Action</string>
    <string name="failed_remove_tag">Failed to remove a tag</string>
    <string name="failed_rename_tag">Failed to rename a tag</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_tag">Add New Tag</string>
    <string name="yes_remove">Yes, Remove</string>
    <string name="enter_new_tag_name">Enter a name for new tag:</string>
    <string name="tag_name_required">Error: Tag name is required!</string>
    <string name="tag_name_too_long">Error: Tag name is too long. Max 250 chars.</string>
    <string name="confirm_remove_tag">Tag \'%s\' can be in use. Do you really want to remove it?</string>
    <string name="never_refresh">Never refresh and open received links</string>

    <string name="shared_from">Shared from&#160;</string>

    <plurals name="minutes">
        <item quantity="one">Every %d minute</item>
        <item quantity="other">Every %d minutes</item>
    </plurals>

</resources>