<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_height="fill_parent"
              android:layout_width="fill_parent">

    <TextView android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:text="@string/please_login"
              android:textSize="30sp"
              android:gravity="center"
              android:layout_marginTop="10dp"
              android:layout_marginBottom="20dp"/>

    <TextView android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:text="@string/email"
              android:textSize="20sp"
              android:layout_marginTop="10dp"/>

    <EditText android:id="@+id/email"
              android:layout_height="wrap_content"
              android:layout_width="fill_parent"/>

    <TextView android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:text="@string/password"
              android:textSize="20sp"
              android:layout_marginTop="10dp"/>

    <EditText android:id="@+id/password"
              android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:password="true"/>

    <Button android:id="@+id/login"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/login"
            android:layout_marginTop="20dp"
            android:textSize="20sp"/>

</LinearLayout>