<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_height="fill_parent"
              android:layout_width="fill_parent">

    <include layout="@layout/titlebar"/>

    <LinearLayout android:orientation="vertical"
                  android:layout_height="fill_parent"
                  android:layout_width="fill_parent"
                  android:paddingLeft="@dimen/simple_window_side_padding"
                  android:paddingRight="@dimen/simple_window_side_padding"
                  android:paddingBottom="@dimen/simple_window_bottom_padding">

        <TextView android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  android:text="@string/please_login"
                  android:textSize="30sp"
                  android:gravity="center"
                  android:layout_marginTop="10dp"
                  android:layout_marginBottom="20dp"/>

        <TextView android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  android:text="@string/email"
                  android:textSize="20sp"
                  android:layout_marginTop="10dp"/>

        <EditText android:id="@+id/email"
                  android:layout_height="wrap_content"
                  android:inputType="textEmailAddress"
                  android:layout_width="fill_parent"
                  android:autoText="true"/>

        <TextView android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  android:text="@string/password"
                  android:textSize="20sp"
                  android:layout_marginTop="10dp"/>

        <EditText android:id="@+id/password"
                  android:inputType="textPassword"
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  android:password="true"/>

        <Button android:id="@+id/login" style="@style/LoginButton"/>

        <RelativeLayout android:orientation="horizontal"
                        android:layout_height="fill_parent"
                        android:layout_width="fill_parent">

            <Button android:id="@+id/register"
                    style="@style/SmallRegisterButton"
                    android:text="@string/register_now"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="4dp"/>

            <TextView android:layout_height="wrap_content"
                      android:layout_width="wrap_content"
                      android:text="@string/not_a_user"
                      android:layout_alignBaseline="@id/register"
                      android:layout_toLeftOf="@id/register"
                      android:textSize="14sp"/>
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>