<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_height="fill_parent"
              android:layout_width="fill_parent">

    <include layout="@layout/titlebar"/>

    <LinearLayout android:orientation="vertical"
                  android:layout_height="fill_parent"
                  android:layout_width="fill_parent"
                  android:paddingLeft="@dimen/simple_window_side_padding"
                  android:paddingRight="@dimen/simple_window_side_padding">

        <TextView android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  android:text="@string/registration"
                  android:textSize="30sp"
                  android:gravity="center"
                  android:layout_marginTop="10dp"
                  android:layout_marginBottom="20dp"/>

        <TextView android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  android:text="@string/email"
                  android:textSize="20sp"
                  android:layout_marginTop="10dp"/>

        <EditText android:id="@+id/email"
                  android:layout_height="wrap_content"
                  android:inputType="textEmailAddress"
                  android:layout_width="fill_parent"
                  android:autoText="true"/>

        <TextView android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  android:text="@string/password"
                  android:textSize="20sp"
                  android:layout_marginTop="10dp"/>

        <EditText android:id="@+id/password"
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  android:inputType="textPassword"
                  android:password="true"/>

        <Button android:id="@+id/register" style="@style/RegisterButton"/>

    </LinearLayout>

</LinearLayout>