<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_height="fill_parent"
              android:layout_width="fill_parent">

    <include layout="@layout/titlebar"/>

    <ScrollView android:fillViewport="true"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent">

        <LinearLayout android:orientation="vertical"
                      android:layout_height="fill_parent"
                      android:layout_width="fill_parent"
                      android:paddingLeft="@dimen/simple_window_side_padding"
                      android:paddingRight="@dimen/simple_window_side_padding"
                      android:paddingBottom="@dimen/simple_window_bottom_padding">

            <RelativeLayout android:orientation="vertical"
                            android:layout_height="wrap_content"
                            android:layout_width="fill_parent">

                <TextView android:id="@+id/reset_password_label"
                          android:layout_height="wrap_content"
                          android:layout_width="fill_parent"
                          android:layout_alignParentTop="true"
                          android:text="@string/please_reset_password"
                          android:textSize="30sp"
                          android:gravity="center"
                          android:layout_marginTop="10dp"
                          android:layout_marginBottom="20dp"/>

                <TextView android:id="@+id/reset_password_desc"
                          android:layout_below="@id/reset_password_label"
                          android:layout_height="wrap_content"
                          android:layout_width="fill_parent"
                          android:text="@string/reset_password_desc"/>

                <TextView android:id="@+id/email_label"
                          android:layout_height="wrap_content"
                          android:layout_width="fill_parent"
                          android:layout_below="@id/reset_password_desc"
                          android:text="@string/email"
                          android:textSize="20sp"
                          android:layout_marginTop="20dp"/>

                <EditText android:id="@+id/email"
                          android:layout_height="wrap_content"
                          android:layout_below="@id/email_label"
                          android:inputType="textEmailAddress"
                          android:layout_width="fill_parent"
                          android:autoText="true"/>

                <Button android:id="@+id/reset_password"
                        android:layout_below="@id/email"
                        style="@style/ResetPasswordButton"/>

            </RelativeLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>